# UR5LegoVision

./: .gitignore  .gitmodules  LICENSE  README.md  ScreenCamera_2023-05-10-22-37-50.json  ScreenCamera_2023-05-10-22-40-25.json  ScreenCamera_2023-05-10-22-49-28.json  ScreenCamera_2023-05-10-22-49-30.json  __init__.py  constants.py  lego.world  lego_scene.json  main.py  requirements.txt  requirments.txt  tree
docs/: DH-Transformation.xlsx  (+2 more)
locosim/robot_control/lab_exercises/lab_palopoli/cpp/: CMakeLists.txt  custom_joint_publisher.cpp  package.xml
locosim/robot_descriptions/gripper_description/gripper_description/: CMakeLists.txt  package.xml
locosim/robot_descriptions/gripper_description/gripper_description/launch/: load_gripper.launch  rviz.launch  upload.launch
locosim/robot_descriptions/gripper_description/gripper_description/meshes/: finger.stl  finger_simple.stl  gripper_base_up.stl  soft_gripper_base_down.stl  soft_gripper_finger1.stl  soft_gripper_finger2.stl
locosim/robot_descriptions/gripper_description/gripper_description/urdf/: finger.xacro  finger_transmission.xacro  gripper.macro.xacro  gripper.xacro  soft_finger.xacro  soft_gripper.macro.xacro
locosim/robot_descriptions/myrobot_description/: CMakeLists.txt  package.xml
locosim/robot_descriptions/myrobot_description/config/: ros_impedance_controller.yaml
locosim/robot_descriptions/myrobot_description/gazebo/: gazebo.urdf.xacro
locosim/robot_descriptions/myrobot_description/launch/: rviz.launch  upload.launch
locosim/robot_descriptions/myrobot_description/robots/: myrobot.srdf.xacro  myrobot.urdf.xacro
locosim/robot_descriptions/myrobot_description/rviz/: conf.rviz
locosim/robot_descriptions/myrobot_description/scripts/: go0
locosim/robot_descriptions/myrobot_description/urdfs/: myleg.gazebo.xacro  myleg.transmission.xacro  myleg.xacro
locosim/robot_descriptions/ur_description/: CMakeLists.txt  package.xml
locosim/robot_descriptions/ur_description/config/: ros_impedance_controller.yaml  ros_impedance_controller_gripper.yaml  ros_impedance_controller_soft_gripper.yaml
locosim/robot_descriptions/ur_description/config/ur5e/: joint_limits.yaml  ur5e_controllers.yaml  ur5e_controllers_gripper.yaml  ur5e_controllers_soft_gripper.yaml
locosim/robot_descriptions/ur_description/gripper/scripts/: onrobot_superminimal.script  soft_close.script  soft_idle.script  soft_open.script
locosim/robot_descriptions/ur_description/launch/: multiple_realsense.launch  rviz.launch  upload.launch
locosim/robot_descriptions/ur_description/meshes/tavolo/: model.config  model.sdf
locosim/robot_descriptions/ur_description/rviz/: conf.rviz  multiple_robots.rviz  single_robot.rviz
locosim/robot_descriptions/ur_description/scripts/: go0
locosim/robot_descriptions/ur_description/sensors/: d435_camera.urdf.xacro  d435_camera_openni.gazebo.urdf.xacro
locosim/robot_descriptions/ur_description/urdf/: ur5.srdf.xacro  ur5.urdf (copy).xacro  ur5.urdf.xacro
locosim/robot_descriptions/ur_description/urdf/inc/: tavolo.xacro  ur_macro.xacro  ur_transmissions.xacro
locosim/robot_hardware_interfaces/base_hardware_interface/: CMakeLists.txt  package.xml
locosim/robot_hardware_interfaces/base_hardware_interface/include/base_hardware_interface/: base_robot_hw.h  contact_switch_sensor_interface.h  ground_truth_interface.h
locosim/robot_hardware_interfaces/base_hardware_interface/src/: base_robot_hw.cpp
locosim/ros_impedance_controller/: CMakeLists.txt  README.md  controller_plugin.xml  package.xml
locosim/ros_impedance_controller/config/: joint_state_publisher.yaml  operator.rviz  operator_floating.rviz
locosim/ros_impedance_controller/include/ros_impedance_controller/: controller.h
locosim/ros_impedance_controller/launch/: ros_impedance_controller_ur5.launch  ros_impedance_controller_ur5_multiple.launch  visualize.launch
locosim/ros_impedance_controller/msg/: BaseState.msg  ContactsState.msg  EffortPid.msg  Forces.msg  pid.msg
locosim/ros_impedance_controller/src/: controller.cpp
locosim/ros_impedance_controller/srv/: MoveJoints.srv  MoveTo.srv  generic_float.srv  get_effort_pid.srv  get_map.srv  set_pids.srv
locosim/ros_impedance_controller/worlds/: empty.world  lego.world
locosim/ros_impedance_controller/worlds/models/X1-Y1-Z2/: mesh_X1-Y1-Z2.sdf  model.config  pointcloud_X1-Y1-Z2.ply
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z1/: mesh_X1-Y2-Z1.sdf  pointcloud_X1-Y2-Z1.ply
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2/: mesh_X1-Y2-Z2.sdf  pointcloud_X1-Y2-Z2.ply
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2-CHAMFER/: mesh_X1-Y2-Z2-CHAMFER.sdf  pointcloud_X1-Y2-Z2-CHAMFER.ply
locosim/ros_impedance_controller/worlds/models/X1-Y2-Z2-TWINFILLET/: mesh_X1-Y2-Z2-TWINFILLET.sdf  pointcloud_X1-Y2-Z2-TWINFILLET.ply
locosim/ros_impedance_controller/worlds/models/X1-Y3-Z2/: mesh_X1-Y3-Z2.sdf  model.config  pointcloud_X1-Y3-Z2.ply
locosim/ros_impedance_controller/worlds/models/X1-Y3-Z2-FILLET/: mesh_X1-Y3-Z2-FILLET.sdf
locosim/ros_impedance_controller/worlds/models/X1-Y4-Z1/: mesh_X1-Y4-Z1.sdf  pointcloud_X1-Y4-Z1.ply
locosim/ros_impedance_controller/worlds/models/X1-Y4-Z2/: mesh_X1-Y4-Z2.sdf  model.config  pointcloud_X1-Y4-Z2.ply
locosim/ros_impedance_controller/worlds/models/X2-Y2-Z2/: mesh_X2-Y2-Z2.sdf  model.config  pointcloud_X2-Y2-Z2.ply
locosim/ros_impedance_controller/worlds/models/X2-Y2-Z2-FILLET/: mesh_X2-Y2-Z2-FILLET.sdf  pointcloud_X2-Y2-Z2-FILLET.ply
locosim/ros_impedance_controller/worlds/models/box/: model.config
locosim/ros_impedance_controller/worlds/models/brick/: model.sdf
locosim/ros_impedance_controller/worlds/models/cone/: model.config
locosim/ros_impedance_controller/worlds/models/cylinder/: model.sdf
motion/: CMakeLists.txt  PosRot.py  action_list.py  command.py  gazebo_command.py  inv_kinematics.py  kine.py  kinematics.py  main.py  motion_planner.py  moveit_control.py  package.xml  test.py  ur5_controller.py  utils.py
motion/include/: kinematics.h
motion/msg/: pos.msg
motion/src/: motionPlanner.cpp  taskManager.cpp
(+663 files in other folders)
